<?xml version="1.0"?>
<package format="2">
  <name>catkin_simple_example</name>
  <version>0.0.0</version>
  <description>Catkin simple example package</description>
  <maintainer email="your.email@email.com">Your Name</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
</package>